[gd_scene load_steps=17 format=3 uid="uid://bmbnpyr07v7ku"]

[ext_resource type="Script" path="res://scripts/skeleton.gd" id="1_0s8pr"]
[ext_resource type="Texture2D" uid="uid://bwkmgvn3a67go" path="res://sprites/Skeleton/Limping_Movement (32 x 32).png" id="1_by7u8"]
[ext_resource type="Texture2D" uid="uid://damnes405vpqc" path="res://sprites/Skeleton/Bone_Toss (32 x 32).png" id="2_grwmq"]
[ext_resource type="Texture2D" uid="uid://csh5cpaht8k4p" path="res://sprites/Skeleton/Hurt (32 x 32).png" id="3_7xs3f"]
[ext_resource type="Texture2D" uid="uid://cbi5dto4r7diu" path="res://sprites/Skeleton/Crumbling_Into_Bone_Pile (32 x 32).png" id="3_ld600"]
[ext_resource type="PackedScene" uid="uid://dj5q0fcblxbck" path="res://scenes/hitbox.tscn" id="5_vwgq3"]
[ext_resource type="Texture2D" uid="uid://cexpvrvjpefde" path="res://sprites/Skeleton/Bone_Pile_Wakeup (32 x 32).png" id="6_njjdk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m34jl"]
radius = 4.20443
height = 21.1761

[sub_resource type="Animation" id="Animation_vmj53"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_by7u8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3umgs"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_grwmq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_bone"
}]
}

[sub_resource type="Animation" id="Animation_kxxpv"]
resource_name = "dead"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_ld600")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ggr2i"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_7xs3f")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_l1kyy"]
resource_name = "limping"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_by7u8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_81e0j"]
resource_name = "revive"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_njjdk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tj21c"]
_data = {
"RESET": SubResource("Animation_vmj53"),
"attack": SubResource("Animation_3umgs"),
"dead": SubResource("Animation_kxxpv"),
"hurt": SubResource("Animation_ggr2i"),
"limping": SubResource("Animation_l1kyy"),
"revive": SubResource("Animation_81e0j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvd3i"]
size = Vector2(17.263, 11.4431)

[node name="skeleton" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_0s8pr")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -15.434)
texture = ExtResource("1_by7u8")
hframes = 6

[node name="hurt_sprite" type="Sprite2D" parent="sprite"]
visible = false
self_modulate = Color(0.909804, 0.231373, 0.14902, 1)
texture = ExtResource("3_7xs3f")
hframes = 2

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -11.2753)
shape = SubResource("CapsuleShape2D_m34jl")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tj21c")
}

[node name="ground_detector" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -4)
target_position = Vector2(0, 10)

[node name="player_detector" type="RayCast2D" parent="."]
visible = false
position = Vector2(0, -4)
target_position = Vector2(50, 0)
collision_mask = 2

[node name="bone_spawn_point" type="Marker2D" parent="."]
visible = false
position = Vector2(12, -12)

[node name="hitbox" parent="." instance=ExtResource("5_vwgq3")]
visible = false

[node name="collision" type="CollisionShape2D" parent="hitbox"]
visible = false
position = Vector2(0.731987, -21.1435)
shape = SubResource("RectangleShape2D_rvd3i")
debug_color = Color(0.992157, 0, 0.25098, 0.419608)

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
